--- a/.github/workflows/build_cover.yml
+++ b/.github/workflows/build_cover.yml
@@ -20,7 +20,7 @@ jobs:
       - name: perl -V
         run: perl -V
       - name: Install dependencies
-        run: curl -L http://cpanmin.us/ | perl - -n --installdeps . --with-recommends --with-suggests --with-develop --with-configure --with-feature
+        run: curl -L http://cpanmin.us/ | perl - -n -q --installdeps . --with-recommends --with-suggests --with-develop --with-configure --with-feature
       - name: Run build
         run: |
             perl Build.PL
