--- a/.github/workflows/build_windows.yml
+++ b/.github/workflows/build_windows.yml
@@ -22,8 +22,8 @@ jobs:
         run: perl -V
       - name: Install dependencies
         run: |
-            curl -L http://cpanmin.us/ | perl - -n Win32
-            curl -L http://cpanmin.us/ | perl - -n --installdeps . --with-recommends --with-suggests --with-develop --with-configure --with-feature
+            curl -L http://cpanmin.us/ | perl - -n -q --installdeps . --with-recommends --with-suggests --with-develop --with-configure --with-feature
+            curl -L http://cpanmin.us/ | perl - -n -q Win32
       - name: Run build
         run: |
             perl Build.PL
