--- a/.github/workflows/build_windows.yml
+++ b/.github/workflows/build_windows.yml
@@ -21,9 +21,9 @@ jobs:
       - name: perl -V
         run: perl -V
       - name: Install dependencies
-        run: |
-            curl -L http://cpanmin.us/ | perl - -n -q --installdeps . --with-recommends --with-suggests --with-develop --with-configure --with-feature
-            curl -L http://cpanmin.us/ | perl - -n -q --reinstall Win32
+        run: curl -L http://cpanmin.us/ | perl - -n -q --installdeps . --with-recommends --with-suggests --with-develop --with-configure --with-feature
+      - name: Install Win32.pm
+        run: curl -L http://cpanmin.us/ | perl - -n -q --reinstall Win32
       - name: Run build
         run: |
             perl Build.PL
