--- a/.github/workflows/build_windows.yml
+++ b/.github/workflows/build_windows.yml
@@ -26,8 +26,8 @@ jobs:
         run: curl -L http://cpanmin.us/ | perl - -n -q --reinstall Win32
       - name: Run build
         run: |
-            perl -e 'print "$ENV{PERL5LIB}\n"'
-            perl -e 'print "$_\n" for @INC'
+            perl -e 'print $ENV{PERL5LIB}'
+            perl -e 'print join(" ", @INC)'
             perl Build.PL
             ./Build manifest
       - name: Run test
