--- a/.github/workflows/build_windows.yml
+++ b/.github/workflows/build_windows.yml
@@ -28,6 +28,7 @@ jobs:
         run: |
             perl -e "print join(' ', @INC)"
             perldoc -l Win32
+            set PERL5LIB=C:\perl\site\lib;%PERL5LIB%
             perl Build.PL
             ./Build manifest
       - name: Run test
