--- a/.github/workflows/build_windows.yml
+++ b/.github/workflows/build_windows.yml
@@ -22,20 +22,9 @@ jobs:
         run: perl -V
       - name: Install dependencies
         run: curl -L http://cpanmin.us/ | perl - -n -q --installdeps . --with-recommends --with-suggests --with-develop --with-configure --with-feature
-      - name: Show Info
-        run: |
-            perldoc -l Win32
-            dir
-            perl -e "print join(' ', @INC);"
-            perl -e "print `dir $_` for @INC;"
       - name: Run build
         run: |
             perl Build.PL
             ./Build manifest
       - name: Run test
-        run: |
-            perldoc -l Win32
-            dir
-            perl -e "print join(' ', @INC);"
-            perl -e "print `dir $_` for @INC;"
-            ./Build test
+        run: ./Build test
