--- a/.github/workflows/linux_latest_cover.yml
+++ b/.github/workflows/linux_latest_cover.yml
@@ -1,4 +1,4 @@
-name: build_xt
+name: build_linux_latest
 
 on:
   push:
@@ -20,12 +20,16 @@ jobs:
       - name: perl -V
         run: perl -V
       - name: Install dependencies
-        run: curl -L http://cpanmin.us/ | perl - -n -q --installdeps . --with-recommends --with-suggests --with-develop --with-configure --with-feature
-      - name: Install Dev modules
-        run: curl -sL https://git.io/cpm | perl - install -g --show-build-log-on-failure Test::Perl::Critic Test::Pod::Coverage Test::Pod Test::NoTabs Test::Vars Test::File::Find::Rule
+        run: curl -sL https://git.io/cpm | perl - install -g --with-recommends --with-test --with-configure --with-develop --show-build-log-on-failure
       - name: Run build
         run: |
             perl Build.PL
             ./Build manifest
       - name: Run test
         run: ./Build test
+      - name: Run Cover
+        env:
+          COVERALLS_REPO_TOKEN: ${{ secrets.COVERALLS_REPO_TOKEN }}
+        run: |
+            cover -test
+            cover -report coveralls
