--- a/.github/workflows/linux_old_versions.yml
+++ b/.github/workflows/linux_old_versions.yml
@@ -1,4 +1,4 @@
-name: build_old
+name: build_linux_old_versions
 
 on:
   push:
@@ -26,10 +26,12 @@ jobs:
       - uses: actions/checkout@v1
       - name: perl -V
         run: perl -V
-      - name: Install cpanm
-        run: curl -L http://cpanmin.us/ | perl - App::cpanminus
       - name: Install dependencies
-        run: cpanm -n --installdeps . --with-recommends --with-suggests --with-develop --with-configure --with-feature
+        run: curl -sL https://git.io/cpm | perl - install -g --with-recommends --with-test --with-configure --show-build-log-on-failure
+        if: matrix.perl-version == '5.8'
+      - name: Install dependencies With develop
+        run: curl -sL https://git.io/cpm | perl - install -g --with-recommends --with-test --with-configure --with-develop --show-build-log-on-failure
+        if: matrix.perl-version != '5.8'
       - name: Run build
         run: |
             perl Build.PL
