--- a/.github/workflows/mac_latest.yml
+++ b/.github/workflows/mac_latest.yml
@@ -17,7 +17,7 @@ jobs:
       - name: perl -V
         run: perl -V
       - name: Install dependencies
-        run: curl -L http://cpanmin.us/ | perl - -n -q --installdeps . --with-recommends --with-suggests --with-develop --with-configure --with-feature
+        run: curl -sL https://git.io/cpm | perl - install -g --with-recommends --with-test --with-configure --with-develop --show-build-log-on-failure
       - name: Run build
         run: |
             perl Build.PL
