--- a/.github/workflows/linux_old_versions.yml
+++ b/.github/workflows/linux_old_versions.yml
@@ -34,8 +34,8 @@ jobs:
         run: curl -sL https://git.io/cpm | perl - install -g --with-recommends --with-test --with-configure --with-develop --show-build-log-on-failure
         if: matrix.perl-version != '5.8'
       - name: Run build
-        run: |
-            perl Build.PL
-            ./Build manifest
+        run: perl Build.PL
+      - name: Build manifest
+        run: ./Build manifest
       - name: Run test
         run: ./Build test
