--- a/.github/workflows/mac_latest.yml
+++ b/.github/workflows/mac_latest.yml
@@ -19,8 +19,8 @@ jobs:
       - name: Install dependencies
         run: curl -sL https://git.io/cpm | perl - install -g --with-recommends --with-test --with-configure --with-develop --show-build-log-on-failure
       - name: Run build
-        run: |
-            perl Build.PL
-            ./Build manifest
+        run: perl Build.PL
+      - name: Build manifest
+        run: ./Build manifest
       - name: Run test
         run: ./Build test
