--- a/.github/workflows/linux_latest_benchmark.yml
+++ b/.github/workflows/linux_latest_benchmark.yml
@@ -3,7 +3,7 @@ name: linux_latest_benchmark
 on:
   push:
     branches:
-      - '*'
+      - master
     tags-ignore:
       - '*'
   pull_request:
