--- a/t/testset/bot/bot_misc.yaml
+++ b/t/testset/bot/bot_misc.yaml
@@ -103,3 +103,11 @@
   is_windows: false
   is_chromeos: false
   version: '3.2'
+- ua: "SearchAtlas.com SEO Crawler"
+  name: 'SearchAtlas.com'
+  is_bot: true
+  is_ios: false
+  is_android: false
+  is_linux: false
+  is_windows: false
+  is_chromeos: false
