--- a/t/testset/browser/apple_safari.yaml
+++ b/t/testset/browser/apple_safari.yaml
@@ -25,3 +25,12 @@
   is_windows: false
   is_chromeos: false
   version: '534.13'
+- ua: 'Mozilla/5.0 (iPhone; CPU iPhone OS 13_3_1 like Mac OS X) AppleWebKit/605.1.15 (KHTML, like Gecko) Version/13.0.5 Mobile/15E148 Safari/604.1'
+  name: 'Apple Safari'
+  is_bot: false
+  is_ios: true
+  is_android: false
+  is_linux: false
+  is_windows: false
+  is_chromeos: false
+  version: '604.1'
