--- a/t/testset/http_client/http_clients.yaml
+++ b/t/testset/http_client/http_clients.yaml
@@ -106,6 +106,15 @@
   is_windows: false
   is_chromeos: false
   version: '7.19.5'
+- ua: 'AdsTxtCrawler/1.0.2'
+  name: 'AdsTxtCrawler'
+  is_bot: false
+  is_ios: false
+  is_android: false
+  is_linux: false
+  is_windows: false
+  is_chromeos: false
+  version: '1.0.2'
 - ua: 'GuzzleHttp/6.2.1 curl/7.47.0 PHP/7.0.13-0ubuntu0.16.04.1'
   name: 'Guzzle'
   is_bot: false
