--- a/t/testset/bot/bot_misc.yaml
+++ b/t/testset/bot/bot_misc.yaml
@@ -119,3 +119,11 @@
   is_linux: false
   is_windows: false
   is_chromeos: false
+- ua: "The Knowledge AI"
+  name: 'The Knowledge AI'
+  is_bot: true
+  is_ios: false
+  is_android: false
+  is_linux: false
+  is_windows: false
+  is_chromeos: false
