--- a/t/testset/http_client/http_clients.yaml
+++ b/t/testset/http_client/http_clients.yaml
@@ -177,6 +177,15 @@
   is_windows: false
   is_chromeos: false
   version: '1.1'
+- ua: 'Go 1.1 package http'
+  name: 'Go http-client'
+  is_bot: false
+  is_ios: false
+  is_android: false
+  is_linux: false
+  is_windows: false
+  is_chromeos: false
+  version: '1.1'
 - ua: 'Apache-HttpClient/4.5.2 (Java/1.8.0_171)'
   name: 'Apache-HttpClient'
   is_bot: false
