--- a/.github/workflows/linux_latest_benchmark.yml
+++ b/.github/workflows/linux_latest_benchmark.yml
@@ -7,6 +7,11 @@ on:
     tags-ignore:
       - '*'
   pull_request:
+    branches:
+      - '!bump-version'
+      - '!bump_version'
+      - '!doc?'
+      - '!pod'
 
 jobs:
   perl:
