--- a/t/testset/bot/bot_misc.yaml
+++ b/t/testset/bot/bot_misc.yaml
@@ -145,3 +145,12 @@
   is_windows: false
   is_chromeos: false
   version: '1.0'
+- ua: 'Mozilla/5.0 zgrab/0.x'
+  name: 'ZGrab'
+  is_bot: true
+  is_ios: false
+  is_android: false
+  is_linux: false
+  is_windows: false
+  is_chromeos: false
+  version: '0.x'
