--- a/t/testset/bot/bot_misc.yaml
+++ b/t/testset/bot/bot_misc.yaml
@@ -154,3 +154,12 @@
   is_windows: false
   is_chromeos: false
   version: '0.x'
+- ua: 'Mozilla/5.0 (compatible; RyowlEngine/1.0; +https://ryowl.org)'
+  name: 'RyowlEngine'
+  is_bot: true
+  is_ios: false
+  is_android: false
+  is_linux: false
+  is_windows: false
+  is_chromeos: false
+  version: '1.0'
