--- a/t/testset/http_client/http_clients.yaml
+++ b/t/testset/http_client/http_clients.yaml
@@ -275,3 +275,12 @@
   is_windows: false
   is_chromeos: false
   version: '4.0.0'
+- ua: 'Mozilla/4.0 (compatible; Win32; WinHttp.WinHttpRequest.5)'
+  name: 'WinHttpRequest'
+  is_bot: false
+  is_ios: false
+  is_android: false
+  is_linux: flase
+  is_windows: true
+  is_chromeos: false
+  version: '5'
